# Games

./: .gitignore
anime/: Cargo.toml  README.md
anime/assets/shaders/: fsq.vert  gbuffer.frag  gbuffer.vert  mesh_gbuffer.frag  mesh_gbuffer.vert  outline.frag  outline.vert  toon.frag  toon.vert  toon_gbuffer.frag
anime/docs/: CHARACTER_CREATION.md  ROADMAP.md  SHADING_RECIPE.md  procedural-anime-assets.txt
anime/examples/: char_01.yml
anime/stylize-cli/: Cargo.toml
anime/stylize-cli/src/: main.rs
anime/stylize-core/: Cargo.toml  build.rs
anime/stylize-core/src/: lib.rs
anime/stylize-core/src/asset_dna/: mod.rs  schema.rs
anime/stylize-core/src/export/: mod.rs
anime/stylize-core/src/fx/: mod.rs
anime/stylize-core/src/render/: gbuffer.rs  mesh.rs  mod.rs  outline.rs  post.rs  sprite_pack.rs  toon.rs
anime/stylize-core/src/render/vk/: mod.rs
anime/stylize-core/src/rig/: mod.rs
anime/stylize-core/src/secondary/: mod.rs
macrokid/: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMBINATOR_THEORY.md  CONTRIBUTING.md  Cargo.toml  EXPERIMENTS.md  IR.md  MACROKID_GRAPHICS.md  MACROKID_THREADS.md  ONBOARDING.md  README.md  TESTING.md  TODO.md  TODOS.md  clippy.toml  package-lock.json  package.json
macrokid/.cargo/: config.toml
macrokid/ARCHIVE/: COMBINATOR_COMPLETENESS.md  COMBINATOR_IMPLEMENTATION_GUIDE.md  DOCS_INDEX.md  ENGINE_RUNTIME.md  OPTION_B_COMPLETE.md  README.md  RECENT_UPDATES.md  SESSION_SUMMARY.md
macrokid/docs/: BARRIER_CODEGEN_DESIGN.md  MULTITHREADED_RECORDING_DESIGN.md  PARALLEL_IMPLEMENTATION_SUMMARY.md  USAGE_EXAMPLES.md
macrokid/docs/architecture/: combinators.md  ir.md  overview.md
macrokid/docs/design/: framework-improvements.md  parse-benchmark.md  syn-quote-analysis.md
macrokid/docs/guides/: codegen-quickref.md  codegen-tutorial.md  getting-started.md
macrokid/docs/reference/: match-arm-builder.md
macrokid/example/: Cargo.toml
macrokid/example/src/: main.rs
macrokid/examples/: deferred_clustered_lighting.md
macrokid/examples/custom_derive/: Cargo.toml
macrokid/examples/custom_derive/src/: lib.rs
macrokid/examples/custom_derive_support/: Cargo.toml
macrokid/examples/custom_derive_support/src/: lib.rs
macrokid/examples/gfx_dsl/: Cargo.toml  PROJECT_STATUS.md  RECOMMENDED_IMPROVEMENTS.md
macrokid/examples/gfx_dsl/examples/: demo.rs
macrokid/examples/gfx_dsl/src/: lib.rs
macrokid/examples/gfx_dsl_builder_derive/: Cargo.toml
macrokid/examples/gfx_dsl_builder_derive/src/: lib.rs
macrokid/examples/gfx_dsl_support/: Cargo.toml
macrokid/examples/gfx_dsl_support/src/: builder.rs  ir.rs  lib.rs  runtime.rs
macrokid/examples/graphics_demo/: Cargo.toml  build.rs
macrokid/examples/graphics_demo/include/: demo.hpp
macrokid/examples/graphics_demo/src/: main.rs
macrokid/examples/iced/: Cargo.toml  README.md
macrokid/examples/iced/src/: lib.rs
macrokid/examples/iced/src/examples/: basic_counter.rs
macrokid/examples/perl_regex_poc/: Cargo.toml
macrokid/examples/perl_regex_poc/examples/: demo.rs
macrokid/examples/perl_regex_poc/src/: lib.rs
macrokid/examples/perl_regex_runtime/: Cargo.toml
macrokid/examples/perl_regex_runtime/src/: lib.rs
macrokid/examples/render_resources/: Cargo.toml  README.md
macrokid/examples/render_resources/examples/: demo.rs
macrokid/examples/render_resources/src/: lib.rs
macrokid/examples/render_resources_support/: Cargo.toml
macrokid/examples/render_resources_support/src/: lib.rs
macrokid/examples/threads_demo/: Cargo.toml
macrokid/examples/threads_demo/src/: main.rs
macrokid/macrokid/: Cargo.toml
macrokid/macrokid/src/: lib.rs
macrokid/macrokid_clang_exec/: Cargo.toml
macrokid/macrokid_clang_exec/src/: lib.rs
macrokid/macrokid_core/: Cargo.toml  README.md
macrokid/macrokid_core/src/: derive.rs  ir.rs  lib.rs
macrokid/macrokid_core/src/attr/: mod.rs  trace.rs
macrokid/macrokid_core/src/common/: attr_schema.rs  attrs.rs  builders.rs  codegen.rs  collect.rs  derive_dsl.rs  derive_patterns.rs  diag.rs  gen.rs  mod.rs  pattern_dsl.rs  patterns.rs  repr.rs  threads.rs  type_utils.rs  validate.rs  walk.rs
macrokid/macrokid_core/src/common/templates/: debug.rs  display.rs  mod.rs
macrokid/macrokid_core/src/function/: bracket_enum.rs  make_enum.rs  mod.rs
macrokid/macrokid_graphics/: Cargo.toml  README.md
macrokid/macrokid_graphics/docs/: architecture.md  examples.md  getting-started.md  vulkan-notes.md
macrokid/macrokid_graphics/examples/: advanced_pbr_showcase.rs  animated_demo.rs  bridge_smoke.rs  deferred_gbuffer.rs  derive_based_assets.rs  engine_demo.rs  lighting_forward_phong.rs  linux_vulkan.rs  load_proto.rs  pbr_showcase.rs  render_engine.rs  texture_showcase.rs
macrokid/macrokid_graphics/shaders/: anim.frag  anim.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  simple_lit.frag  simple_lit.vert  triangle.frag  triangle.vert
macrokid/macrokid_graphics/src/: assets.rs  engine.rs  lib.rs  pipeline.rs  proto.rs  render_graph.rs  resources.rs  vk_bridge.rs  vk_linux.rs
macrokid/macrokid_graphics_derive/: Cargo.toml
macrokid/macrokid_graphics_derive/src/: assets.rs  gen.rs  lib.rs
macrokid/macrokid_graphics_lighting/: Cargo.toml
macrokid/macrokid_graphics_lighting/src/: lib.rs
macrokid/macrokid_graphics_lighting_derive/: Cargo.toml
macrokid/macrokid_graphics_lighting_derive/src/: lib.rs
macrokid/macrokid_graphics_proto/: Cargo.toml  build.rs
macrokid/macrokid_graphics_proto/proto/: graphics_config.proto
macrokid/macrokid_graphics_proto/src/: lib.rs
macrokid/macrokid_parse_bench/: Cargo.toml
macrokid/macrokid_parse_bench/benches/: parse_attrs.rs
macrokid/macrokid_parse_bench/src/: lib.rs
macrokid/macrokid_threads_derive/: Cargo.toml  README.md
macrokid/macrokid_threads_derive/src/: lib.rs
