[workspace]
resolver = "2"
members = [
    "macrokid",
    "macrokid_core", 
    "example",
    "macrokid_graphics",
    "macrokid_graphics_derive",
    "macrokid_graphics_proto",
    "macrokid_clang_exec",
    "examples/graphics_demo",
    "examples/custom_derive",
    "examples/custom_derive_support",
    "examples/perl_regex_poc",
    "examples/perl_regex_runtime",
    "examples/gfx_dsl",
    "examples/gfx_dsl_support",
    "examples/gfx_dsl_builder_derive",
    "examples/render_resources",
    "macrokid_graphics_lighting",
    "macrokid_graphics_lighting_derive",
]
