[package]
name = "stylize-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "stylize_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
glam = "0.27"
bytemuck = { version = "1", features = ["extern_crate_std"] }

# Vulkan (Ash) is optional behind a feature
ash = { version = "0.37", optional = true }

[features]
default = []
vulkan = ["ash"]

[build-dependencies]
shaderc = "0.8"
