[package]
name = "custom_derive"
version = "0.1.0"
edition = "2021"
description = "Example demonstrating how to use macrokid_core to build custom derive macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
macrokid_core = { path = "../../macrokid_core", features = ["pattern_dsl"] }
