[package]
name = "graphics_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
macrokid_graphics = { path = "../../macrokid_graphics" }
macrokid_graphics_derive = { path = "../../macrokid_graphics_derive" }

[build-dependencies]
macrokid_clang_exec = { path = "../../macrokid_clang_exec" }
serde_json = "1"
